Added prepare upgrade script (#149)
* prepare upgrade script

* Update prepare-upgrade.ts

---------

Co-authored-by: YameenMalik <yameen@seed.im>

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "faucet": "ts-node ./scripts/faucet.ts",
     "debug": "ts-node ./scripts/debug.ts",
     "upgrade:pkg": "ts-node ./scripts/upgrade.ts",
+    "prep:upgrade": "ts-node ./scripts/prepare-upgrade.ts",
     "make:trade": "ts-node ./scripts/makeTrade.ts",
     "test": "ts-mocha --no-timeout tests/*.test.ts",
     "fund:test:accounts": "ts-node ./tests/helpers/fundAccounts.ts",
@@ -30,6 +31,7 @@
   "dependencies": {
     "@iarna/toml": "^2.2.5",
     "@mysten/sui.js": "^0.37.1",
+    "@mysten/zklogin": "^0.3.4",
     "@noble/hashes": "^1.2.0",
     "@noble/secp256k1": "^1.7.1",
     "@pythnetwork/pyth-sui-js": "^1.0.2",
